# SublimeGenerator

./: .gitignore  CMakeLists.txt  README.md
ProjectGenerator/: CMakeLists.txt
ProjectGenerator/assets/Application/: .gitignore  CMakeLists.txt
ProjectGenerator/assets/Application/pgAppOrStlName/: CMakeLists.txt
ProjectGenerator/assets/Application/pgAppOrStlName/CMake/: app.manifest  resources.rc
ProjectGenerator/assets/Application/pgAppOrStlName/assets/icon/: icon.icns
ProjectGenerator/assets/ApplicationEngine/: CMakeLists.txt
ProjectGenerator/assets/ApplicationEngine/pgAppOrStlName/: CMakeLists.txt
ProjectGenerator/assets/ApplicationEngine/pgAppOrStlName/CMake/: Info.plist.in
ProjectGenerator/assets/ApplicationEngine/pgAppOrStlName/assets/icon/: iconGen.sh
ProjectGenerator/assets/ApplicationEngine/pgAppOrStlName/cpp/: main.cpp
ProjectGenerator/assets/ApplicationEngine/pgLibName/CMake/: pgLibName.pc.in
ProjectGenerator/assets/Basic/: CMakeLists.txt
ProjectGenerator/assets/Basic/cpp/: main.cpp
ProjectGenerator/assets/Standalone/: CMakeLists.txt
ProjectGenerator/assets/Standalone/pgAppOrStlName/: CMakeLists.txt
ProjectGenerator/assets/StandaloneEngine/: CMakeLists.txt  README.md
ProjectGenerator/assets/StandaloneEngine/pgLibName/: CMakeLists.txt
ProjectGenerator/assets/StandaloneEngine/pgLibName/cpp/pgLibNameTest/: Test.cpp
ProjectGenerator/assets/StandaloneEngine/pgLibName/include/pgLibNameTest/: Test.h
ProjectGenerator/assets/old/ApplicationEngine/: .gitignore
ProjectGenerator/assets/old/ApplicationEngine/sgAppName/cpp/: main.cpp
ProjectGenerator/assets/old/ApplicationEngine/sgLibName/cpp/sgLibNameTest/: Test.cpp
ProjectGenerator/assets/old/Basic/: README.md
ProjectGenerator/assets/old/Standalone/sgAppName/: CMakeLists.txt
ProjectGenerator/assets/old/Standalone/sgAppName/cpp/: main.cpp
ProjectGenerator/cpp/: FileOps.cpp  TextFormatter.cpp  main.cpp
ProjectGenerator/include/: FileOps.h  Project.h  TextFormatter.h
SublimeGenerator/: CMakeLists.txt
SublimeGenerator/assets/AppEngine/: CMakeLists.txt
SublimeGenerator/assets/AppEngine/sgAppName/: CMakeLists.txt
SublimeGenerator/assets/Basic/: CMakeLists.txt
SublimeGenerator/assets/Standalone/: CMakeLists.txt
SublimeGenerator/assets/Standalone/sgAppName/: CMakeLists.txt
SublimeGenerator/cpp/: FileOps.cpp  TextFormatter.cpp  main.cpp
SublimeGenerator/include/: FileOps.h  Project.h  TextFormatter.h
SublimeGenerator/libraries/CppUtils/: CMakeLists.txt  CppUtils.sublime-project  CppUtils.sublime-workspace  README.md
SublimeGenerator/libraries/CppUtils/CppUtils/: CMakeLists.txt
SublimeGenerator/libraries/CppUtils/CppUtils/CMake/: CppUtils.pc.in  CppUtilsConfig.cmake.in
SublimeGenerator/libraries/CppUtils/CppUtils/cpp/CppUtils/file/: File.cpp  FileDialog.cpp
SublimeGenerator/libraries/CppUtils/CppUtils/include/CppUtils/: CppUtils.h
SublimeGenerator/libraries/CppUtils/CppUtils/include/CppUtils/file/: File.h  FileDialog.h
SublimeGenerator/libraries/CppUtils/CppUtils/libraries/nativefiledialog-extended/: CMakeLists.txt
SublimeGenerator/libraries/CppUtils/CppUtils/libraries/nativefiledialog-extended/src/: CMakeLists.txt
